tests/snapshots/purity_parity/purity_parity__H__64_hm_inferred_call_mismatch.snap
---
source: tests/purity_vm_jit_parity_snapshots.rs
assertion_line: 53
---
Fixture: examples/type_system/failing/64_hm_inferred_call_mismatch.flx
Category: H
Strict: false
Expect compile error: true

== vm command ==
$ flux --no-cache examples/type_system/failing/64_hm_inferred_call_mismatch.flx
exit_code: 1

== jit command ==
$ flux --no-cache examples/type_system/failing/64_hm_inferred_call_mismatch.flx --jit
exit_code: 1

== vm tuples ==
- E300 | TYPE UNIFICATION ERROR | parameter 1: expected `Int`, found `String`

== jit tuples ==
- E300 | TYPE UNIFICATION ERROR | parameter 1: expected `Int`, found `String`

== parity ==
match

== mismatch_debug ==
<none>
