tests/snapshots/purity_parity/purity_parity__H__66_module_constructor_not_public_api.snap
---
source: tests/purity_vm_jit_parity_snapshots.rs
---
Fixture: examples/type_system/failing/66_module_constructor_not_public_api.flx
Category: H
Strict: true
Expect compile error: true

== vm command ==
$ flux --no-cache --strict --root examples/type_system examples/type_system/failing/66_module_constructor_not_public_api.flx
exit_code: 1

== jit command ==
$ flux --no-cache --strict --root examples/type_system examples/type_system/failing/66_module_constructor_not_public_api.flx --jit
exit_code: 1

== vm tuples ==
- E425 | Unresolved Boundary Type | runtime boundary check is unresolved in strict mode
- E086 | Cross-Module Constructor Access | 

== jit tuples ==
- E425 | Unresolved Boundary Type | runtime boundary check is unresolved in strict mode
- E086 | Cross-Module Constructor Access | 

== parity ==
match

== mismatch_debug ==
<none>
