tests/snapshots/purity_parity/purity_parity__H__69_hm_typed_let_infix_compile_mismatch.snap
---
source: tests/purity_vm_jit_parity_snapshots.rs
---
Fixture: examples/type_system/failing/69_hm_typed_let_infix_compile_mismatch.flx
Category: H
Strict: false
Expect compile error: true

== vm command ==
$ flux --no-cache examples/type_system/failing/69_hm_typed_let_infix_compile_mismatch.flx
exit_code: 1

== jit command ==
$ flux --no-cache examples/type_system/failing/69_hm_typed_let_infix_compile_mismatch.flx --jit
exit_code: 1

== vm tuples ==
- E300 | TYPE UNIFICATION ERROR | expected matching '+' operands (Int+Int, Float+Float, or String+String), found String and Int

== jit tuples ==
- E300 | TYPE UNIFICATION ERROR | expected matching '+' operands (Int+Int, Float+Float, or String+String), found String and Int

== parity ==
match

== mismatch_debug ==
<none>
